--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,13 +12,16 @@ dependencies:
     sdk: flutter
 
   # custom imports
-  youtube_explode_dart: ^3.0.5
-  path_provider: ^2.0.15
+  path: any
+  path_provider: any
   just_audio: any
-  video_player: ^2.8.2 
-  # on_audio_query: ^2.9.0
+  video_player: any
+  drift: any
+  drift_flutter: any
   just_audio_windows: any
   media_scanner: any
+  youtube_explode_dart: any
+  # on_audio_query: ^2.9.0
   # flutter_launcher_icons: ^0.14.4
   # firebase_core: ^4.2.1
   # firebase_auth: ^6.1.2
@@ -60,6 +63,8 @@ dev_dependencies:
     sdk: flutter
 
   flutter_launcher_icons: any
+  drift_dev: any
+  build_runner: any
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
